--- a/MesAplication/src/main/resources/static/css/tabela4.css
+++ b/MesAplication/src/main/resources/static/css/tabela4.css
@@ -1,3 +1,14 @@
+select {
+	width: 100%;
+}
+
+option {
+	width: 100%;
+}
+
+input[type=text]{
+	width: 100%;
+}
 
 table.greenTable {
   font-family: Tahoma, serif;
