--- a/MesAplication/src/main/resources/static/css/tabela.css
+++ b/MesAplication/src/main/resources/static/css/tabela.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
 <style>
+#myChart{
+width: 100%;
+height: 30%;
+}
+
+
 table.blueTable {
   border: 0px solid #1C6EA4;
   background-color: #EEEEEE;
