--- a/rodo/src/main/resources/static/css/jquery.signaturepad.css
+++ b/rodo/src/main/resources/static/css/jquery.signaturepad.css
@@ -24,7 +24,7 @@
   padding: 0;
 
   color: #000;
-  font: italic normal 1em/1.375 Georgia,Times,serif;
+  /*font: italic normal 1em/1.375 Georgia,Times,serif;*/
 }
 
 .sigPad label.error {
@@ -187,7 +187,7 @@
   cursor: default;
 
   color: #145394;
-  font: normal 1.875em/50px "Journal",Georgia,Times,serif;
+  /*font: normal 1.875em/50px "Journal",Georgia,Times,serif;*/
 }
 
 .typeItDesc,
@@ -199,7 +199,7 @@
   border-top: 3px solid #ccc;
 
   color: #000;
-  font: italic normal 1em/1.375 Georgia,Times,serif;
+  /*font: italic normal 1em/1.375 Georgia,Times,serif;*/
 }
 
 p.error {
