Added spring security

--- a/rodo/src/main/resources/static/css/form.css
+++ b/rodo/src/main/resources/static/css/form.css
@@ -11,6 +11,13 @@ text-decoration: none;
 font-style: normal;
 font-variant: normal;
 text-transform: none;
+text-align: center;
+}
+
+#rodoinput{
+	text-align: center;
+	width: 50%;
+	
 }
 
 #italicFont {
@@ -34,8 +41,8 @@ font-variant: small-caps;
 text-transform: none;
 margin-left: auto;
 margin-right: auto;
-width: 600px;
-text-align: center;
+width: 800px;
+text-align: justify;
 padding:20px;
 
 background: #EFEFEF;
@@ -67,10 +74,12 @@ font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 font-size: 20px;
 letter-spacing: 3px;
 word-spacing: 2px;
-color: #585858;
+color: #f2f2f2;
 font-weight: 700;
 text-decoration: none;
 font-style: italic;
 font-variant: normal;
 text-transform: none;
+font-weight: normal;
+background-color: #808080;
 }
